# Dopus

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: deploy-docs.yml
CONTRIBUTING/: index.html
api/: index.html
api/agent/: index.html
api/convo/: index.html
api/provider/: index.html
api/tool/: index.html
api/toolrunner/: index.html
docs/: CONTRIBUTING.md  README.md  api.md
docs/api/: agent.md  convo.md  provider.md  tool.md  toolrunner.md
docs/guides/: getting_started.md  todo_list.md  using_pydantic_models.md
dopus/: __init__.py  util.py
dopus/core/: __init__.py  agent.py  convo.py  provider.py  tool.py  tool_registry.py  tool_runner.py
dopus/provider/: __init__.py  anthropic.py  groq.py  open_ai.py
dopus/test/: __init__.py  dopus_test.py
guides/getting_started/: index.html
guides/todo_list/: index.html
guides/tutorials/: index.html
guides/using_pydantic_models/: index.html
scripts/: create_release.py  update_docs.py
search/: search_index.json
test/core/: convo_test.py
