[tool.poetry]
name = "dopus"
version = "0.0.1"
description = "Minimal building blocks for agentic applications"
authors = ["Mike Ashcroft"]
license = "MIT"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"

[tool.poetry.scripts]
serve = "mkdocs.commands.serve:serve"
build = "mkdocs.commands.build:build"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.1"
mkdocstrings-python = "^1.11.1"
mkdocs-material = "^9.5.34"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
